fix: correct jwt import and login
